--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,8 @@
 .intro {
     max-width: 690px;
-    padding: 0 442px 92px 148px;
+    padding-top: 0;
+    padding-bottom: 92px;
+    padding-left: 11.5%;
 }
 
 @media (max-width: 1024px) {
@@ -13,13 +15,16 @@
 @media (max-width: 768px) {
     .intro {
         max-width: 720px;
-        padding: 0;
-        margin: 0 auto;
+        padding-right: 24px;
+        padding-bottom: 88px;
+        padding-left: 24px;
     }
 }
 
 @media (max-width: 320px) {
     .intro {
-        max-width: 100%;
+        padding-right: 16px;
+        padding-bottom: 64px;
+        padding-left: 16px;
     }
 }
