--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,13 @@
 .lead__image {
-    max-width: 984px;
+    max-width: 100%;
     margin: 0 auto;
     object-fit: cover;
+}
+
+@media (max-width: 1280px) {
+    .lead__image {
+        max-width: 984px;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -10,7 +16,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 928px) {
     .lead__image {
         width: 100%;
     }
