--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,6 +7,14 @@
     line-height: 1.04;
 }
 
+@media (max-width: 660px) and (min-width: 320px) {
+    .lead__title {
+        max-width: 90vw;
+        font-size: 40px;
+        line-height: 1.1;
+    }
+}
+
 @media (max-width: 320px) {
     .lead__title {
         max-width: 288px;
