--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,13 @@
     align-content: center;
     margin: 0 auto;
     padding-bottom: 92px;
-    max-width: 984px;
+    max-width: 1280px;
+}
+
+@media (max-width: 1280px) {
+    .lead {
+        max-width: 984px;
+    }
 }
 
 @media (max-width: 1024px) {
