--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -3,38 +3,6 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
+    width: 100%;
+    object-fit: cover;
 }
-
-.photo-grid__item:nth-child(1) {
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-.photo-grid__item:nth-child(2) {
-
-}
-
-.photo-grid__item:nth-child(3) {
-
-} 
-
-.photo-grid__item:nth-child(4) {
-
-}
-
-.photo-grid__item:nth-child(5) {
-
-} 
-
-.photo-grid__item:nth-child(6) {
-
-} 
-
-.photo-grid__item:nth-child(7) {
-
-} 
-
-.photo-grid__item:nth-child(8) {
-    
-} 
-.photo-grid__item:nth-child(1) 
