--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,21 +2,33 @@
     display: flex;
     justify-content: space-between;
     align-items:flex-end;
-    padding-top: 28px;
-    padding-bottom: 56px;
-    max-width: 92.5%;
+    padding: 28px 0 56px;
+    max-width: 1184px;
     box-sizing: border-box;
     margin: 0 auto;
 }
 
+@media (max-width: 1280px) {
+    .header {
+        max-width: calc(100% - 48px*2);
+    }
+}
+
 @media (max-width: 1024px) {
     .header {
-        padding-bottom: 48px;
+        padding-bottom: 48px; 
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        max-width: calc(100% - 24px*2);
     }
 }
 
 @media (max-width: 320px) {
     .header {
         padding-top: 16px;
+        max-width: calc(100% - 16px*2);
     }
 }
