--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,20 @@
 .intro__title {
     margin: 0;
     margin-bottom: 40px;
+    text-align: left;
     font-weight: 900;
     font-size: 54px;
     line-height: 1.07;
     color: #fff;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
+    .intro__title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 425px) {
     .intro__title {
         font-size: 32px;
         line-height: 1.09;
