--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,28 @@
 .intro {
     max-width: 690px;
-    padding-top: 0;
-    padding-bottom: 92px;
-    padding-left: 11.5%;
+    padding: 0 294px 92px 0;
 }
 
 @media (max-width: 1024px) {
     .intro {
-        padding-right: 286px;
-        padding-left: 48px;
+        padding-right: 238px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     .intro {
         max-width: 720px;
         padding-right: 24px;
-        padding-bottom: 88px;
         padding-left: 24px;
+        padding-bottom: 88px;
     }
 }
 
 @media (max-width: 320px) {
     .intro {
+        max-width: 288px;
+        padding-left: 16px;
         padding-right: 16px;
         padding-bottom: 64px;
-        padding-left: 16px;
     }
 }
