--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -14,7 +14,14 @@
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
+    .lead__subtitle {
+        max-width: 90vw;
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 425px) {
     .lead__subtitle {
         font-size: 16px;
         line-height: 1.25;
