--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/intro/__span-accent/intro__span-accent.css);
 @import url(../blocks/intro/intro.css);
 
+@import url(../blocks/container-lead-intro/container-lead-intro.css);
+
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 
