--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,10 +5,8 @@
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.22;
-/* or 122% */
 	text-align: center;
-	color: #FFFFFF;
-	list-style: none;
+	color: #fff;
 	margin: 0;
 	position: relative;
 }
@@ -17,5 +15,7 @@
 	.cover__subtitle {
 		font-size: 14px;
 		line-height: 1.14;
+		padding-left: 16px;
+		padding-right: 16px;
 	}
 }
