--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,15 +9,24 @@
     color: #fff;
     text-decoration: none;
     margin-top: 0;
+    padding: 0 48px;
     margin-bottom: 32px;
     position: relative;
 
+}
+
+@media (max-width: 700px) {
+    .cover__title {
+        font-size: 40px;
+    }
 }
 
 @media (max-width: 425px) {
     .cover__title {
         font-size: 32px;
         line-height: 1.09;
-        margin-bottom: 16;
+        margin-bottom: 16px;
+        padding-left: 35px;
+        padding-right: 35px;
     }
 }
