--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -14,6 +14,11 @@
     text-decoration: none;
 }
 
+.header__lang-link:hover {
+    opacity: 0.5;
+    transition: 0.5s;
+}
+
 @media (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
