--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,30 @@
 .place__image {
-    
+    margin: 0;
+    max-width: 460px;
+    grid-area: ar-image;
+    object-fit: cover;
+}
+
+@media (max-width: 1024px) {
+    .place__image {
+        max-width: 440px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .place__image {
+        max-width: 390px;
+    }
+}
+
+@media (max-width: 768px) {
+    .place__image {
+        max-width: 340px;
+    }
+}
+
+@media (max-width: 425px) {
+    .place__image {
+        max-width: 100%;
+    }
 }
