--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,3 +1,32 @@
 .place__paragraph {
+    margin: 0;
+    padding-bottom: 27px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.63;
+    color: #fff;
+}
 
+.place__paragraph:last-child {
+    padding-bottom: 0;
+}
+
+@media (max-width: 1024px) {
+    .place__paragraph {
+     padding-bottom: 26px;
+    }
+}
+
+@media (max-width: 768px) {
+    .place__paragraph {
+        padding-bottom: 25px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 767px) {
+    .place__paragraph {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
 }
