--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,3 +1,31 @@
 .place__title {
-    
+    grid-area: ar-title;
+    margin: 0;
+    color: #fff;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 1.06;
+}
+
+@media (max-width: 1023px) {
+    .place__title {
+        font-weight: 900;
+        font-size: 42px;
+        line-height: 1.1;
+    }
+}
+
+@media (max-width: 768px) {
+    .place__title {
+        max-width: 330px;
+    }
+}
+
+@media (max-width: 767px) {
+    .place__title {
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 1.09;
+        padding-left: 16px;
+    }
 }
