--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,13 @@
 .place__website {
-    
+    margin: 0;
+    color: #fff;
+    grid-area: ar-website;
+    align-self: end;
+}
+
+@media (max-width: 767px) {
+    .place__website {
+        padding-left: 16px;
+        align-self: start;
+    }
 }
