--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,3 +1,47 @@
 .place {
-    
+    max-width: 100%;
+    margin: 0 auto;
+    padding-bottom: 80px;
+    display: grid;
+    grid-template-columns: 460px 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "ar-title ar-website"
+        "ar-image ar-paragraphs";
+    grid-row-gap: 48px;
+    grid-column-gap: 40px;
+}
+
+.place:last-child {
+    padding-bottom: 0;
+}
+
+@media (max-width: 1024px) {
+    .place {
+        grid-column-gap: 32px;
+        grid-template-columns: 440px 1fr;
+    }
+}
+
+@media (max-width: 1000px) {
+    .place {
+        grid-template-columns: 390px 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .place {
+        grid-column-gap: 28px;
+        grid-template-columns: 340px 1fr;
+        padding-bottom: 73px;
+    }
+}
+
+@media (max-width: 767px) {
+    .place {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 50px;
+        grid-row-gap: 32px;
+    }
 }
