--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,20 +1,23 @@
 .places {
     margin: 0 auto;
-    padding: 92px 0;
-    max-width: 1184px;
+    padding: 92px 48px;
+    max-width: 1280px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-}
+    align-items: center;
+} 
+
 @media (max-width: 1280px) {
     .places {
-        max-width: 984px;
+        max-width: calc(100% - 148px*2);
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
 @media (max-width: 1024px) {
     .places {
-        max-width: 928px;
+        max-width: calc(100% - 48px*2);
     }
 }
 
@@ -22,14 +25,14 @@
     .places {
         padding-top: 88px;
         padding-bottom: 90px;
-        max-width: 720px;
+        max-width: calc(100% - 24px*2);
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 425px) {
     .places {
         padding-top: 64px;
         padding-bottom: 66px;
-        max-width: 320px;
+        max-width: 100%;
     }
 }
