--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,7 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-  	background-image: url(../../../images/cover-trains.jpg);
+  	background-image: url(../../images/cover-trains.jpg);
   	background-size: cover;
   	background-repeat: no-repeat;
 	position: relative;
