--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,11 @@
   	background-color: #2A2C2F;
   	margin: 0 auto;
 	max-width: 1440px;
+	-moz-osx-font-smoothing: grayscale;
+  	-webkit-font-smoothing: antialiased;
+  	-webkit-text-size-adjust: 100%;
+  	-ms-text-size-adjust: 100%;
+  	-moz-text-size-adjust: 100%;
+	text-rendering: optimizeLegibility;
 }
 
