--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,63 +1,7 @@
 .cover {
 	margin: 0 auto;
-	padding: 245px 0;
+	padding: 0;
 	max-width: 1280px;
     box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-  	background-image: url(../../images/cover-trains.jpg);
-  	background-size: cover;
-  	background-repeat: no-repeat;
 	position: relative;
-	cursor: pointer;
-}
-
-.cover::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background: #2A2C2F;
-	opacity: 0.3;
-	
-}
-
-.cover:hover::before {
-	opacity: 0.8;
-	transition: 0.4s;
-}
-
-@media (max-width: 1280px) {
-	.cover {
-		background-image: url(../../images/cover-trains.jpg);
-		max-width: 1184px;
-	}
-}
-
-@media (max-width: 1024px) {
-	.cover {
-		max-width: 100%;
-		background-image: url(../../images/background-m.jpg);
-		padding-top: 195px;
-		padding-bottom: 195px;
-	}
-}
-
-@media (max-width: 768px) {
-	.cover {
-		background-image: url(../../images/background-s.jpg);
-		padding-top: 115px;
-		padding-bottom: 115px;
-	}
-}
-
-@media (max-width: 425px) {
-	.cover {
-		background-image: url(../../images/background-xs.jpg);
-		padding-top: 33px;
-		padding-bottom: 33px;
-	}
 }
